<?xml version="1.0"?>
<package format="2">
  <name>capra_zbar_msgs</name>
  <version>0.0.0</version>
  <description>The capra_zbar_msgs package</description>

  <maintainer email="capra@ens.etsmtl.ca">capra</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
