<?xml version="1.0"?>
<package format="2">
  <name>capra_zbar_ros</name>
  <version>0.0.0</version>
  <description>The capra_zbar_ros package</description>

  <maintainer email="capra@ens.etsmtl.ca">capra</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>zbar</depend>
  <depend>capra_zbar_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
